@@ -150,3 +150,4 @@ Revision	Log Message
 147		Initial religion conversion
 148		Religions for ROTW provinces
 149		Heresy modifier for heretic religions (only if ruler's religion different)
+150		Simplify the heretic modifier
